// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paddingBlock renders 0 1`] = `
Array [
  .c0 {
  padding-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders function 1`] = `
Array [
  .c0 {
  padding-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: has;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: has;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders invalid theme path 1`] = `
Array [
  .c0 {
  padding-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders negative number 1`] = `
Array [
  .c0 {
  padding-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    padding-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    padding-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    padding-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    padding-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    padding-block: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    padding-block: July;
  }
}

@media April {
  .c0 {
    padding-block: August;
  }
}

@media January {
  .c0 {
    padding-block: September;
  }
}

@media April {
  .c0 {
    padding-block: November;
  }
}

@media June {
  .c0 {
    padding-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    padding-block: July;
  }
}

@media April {
  .c0 {
    padding-block: August;
  }
}

@media January {
  .c0 {
    padding-block: September;
  }
}

@media April {
  .c0 {
    padding-block: November;
  }
}

@media June {
  .c0 {
    padding-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-block: January;
  }
}

@media April {
  .c0 {
    padding-block: December;
  }
}

@media January {
  .c0 {
    padding-block: April;
  }
}

@media April {
  .c0 {
    padding-block: May;
  }
}

@media June {
  .c0 {
    padding-block: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    padding-block: January;
  }
}

@media April {
  .c0 {
    padding-block: December;
  }
}

@media January {
  .c0 {
    padding-block: April;
  }
}

@media April {
  .c0 {
    padding-block: May;
  }
}

@media June {
  .c0 {
    padding-block: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders postitive number 1`] = `
Array [
  .c0 {
  padding-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders string 1`] = `
Array [
  .c0 {
  padding-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: June;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: June;
}

<div
    className="c0"
  />,
]
`;

exports[`paddingBlock renders valid theme path 1`] = `
Array [
  .c0 {
  padding-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  padding-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
